--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+@import url(http://code.ionicframework.com/1.3.2/css/ionic.css);
 body{
   font-family: 'Lato',sans-serif;
   text-align: center;
+  background: linear-gradient(to left,grey 50%,white 50%);
+
+}
+
+#replay{
+  margin-top: 20px;
 }
 
 .player{
@@ -8,6 +15,10 @@ body{
   display: flex;
   font-size: 3rem;
 }
+
+/*#firstPlayer{
+  text-decoration: underline red;
+}*/
 
 #player1{
   margin: auto;
@@ -39,4 +50,12 @@ body{
 #hold{
   display: block;
   margin-top: 20px;
+}
+
+#firstDé{
+  margin-top: 90px;
+}
+
+#secondDé{
+  margin-top: 90px;
 }
