--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url(http://code.ionicframework.com/1.3.2/css/ionic.css);
 body{
   font-family: 'Lato',sans-serif;
   text-align: center;
@@ -10,15 +9,14 @@ body{
   margin-top: 20px;
 }
 
+button{
+  border:none;
+}
 .player{
   margin-top: 30px;
   display: flex;
   font-size: 3rem;
 }
-
-/*#firstPlayer{
-  text-decoration: underline red;
-}*/
 
 #player1{
   margin: auto;
@@ -59,3 +57,62 @@ body{
 #secondDé{
   margin-top: 90px;
 }
+.scene {
+  perspective: 400px;
+
+  width: 100%;
+}
+
+svg{
+  color: red;
+}
+
+.cube {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  transform-style: preserve-3d;
+  transform: translateZ(-100px);
+  transition: transform 1s;
+}
+
+[data-show="1"] { transform: translateZ(-100px) rotateY(   0deg); }
+[data-show="2"] { transform: translateZ(-100px) rotateY( -90deg); }
+[data-show="6"] { transform: translateZ(-100px) rotateY(-180deg); }
+[data-show="5"] { transform: translateZ(-100px) rotateY(  90deg); }
+[data-show="3"] { transform: translateZ(-100px) rotateX( -90deg); }
+[data-show="4"] { transform: translateZ(-100px) rotateX(  90deg); }
+
+.cube__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-top: 40%;
+  background: radial-gradient(#FFF, #FFF 50%, #EEE);
+  border: 4px solid black;
+  border-radius: 5%;
+  color: black;
+  font-size: 1000%;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.cube__face--1 { color:red; transform: rotateY(  0deg) translateZ(100px); }
+.cube__face--2 { transform: rotateY( 90deg) translateZ(100px); }
+.cube__face--6 { transform: rotateY(180deg) translateZ(100px); }
+.cube__face--5 { transform: rotateY(-90deg) translateZ(100px); }
+.cube__face--3 { transform: rotateX( 90deg) translateZ(100px); }
+.cube__face--4 { transform: rotateX(-90deg) translateZ(100px); }
+
+
+* { box-sizing: border-box; }
+
+body { font-family: sans-serif; }
+
+.scene {
+  width: 200px;
+  height: 200px;
+  margin: 80px auto;
+}
+
+label { margin-right: 10px; }
